Pushing changes from README

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -29,7 +29,7 @@
 
     <!-- Created main element for the main content and article elements for the self-contained content -->
     <main class="content">
-        <article class="search-engine-optimization">
+        <section class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" 
                 alt="Search Engine Optimization" title="SEO" class="float-left" />
             <h2>Search Engine Optimization</h2>
@@ -39,9 +39,9 @@
                 Search Engine Optimization (SEO) allows you to increase your visibility 
                 and find the right customers for your business.
             </p>
-        </article>
+        </section>
 
-        <article id="online-reputation-management" class="online-reputation-management">
+        <section id="online-reputation-management" class="online-reputation-management">
             <img src="./assets/images/online-reputation-management.jpg" 
                 alt="Online Reputation Management" title="Reputation Management" class="float-right" />
             <h2>Online Reputation Management</h2>
@@ -51,9 +51,9 @@
                 business. Online Reputation Management gives you the control over what potential 
                 customers see when they search for your business.
             </p>
-        </article>
+        </section>
 
-        <article id="social-media-marketing" class="social-media-marketing">
+        <section id="social-media-marketing" class="social-media-marketing">
             <img src="./assets/images/social-media-marketing.jpg" 
                 alt="Social Media Marketing" title="Marketing" class="float-left" />
             <h2>Social Media Marketing</h2>
@@ -62,7 +62,7 @@
                 marketing helps you determine which platforms are suited to your brand, using 
                 analytics to find the right markets and increase your lead generation.
             </p>
-        </article>
+        </section>
     </main>
 
     <!-- Used aside elements for the contnet that is aside from the page contnent and sused section elements for each part -->
